# fty-mdns-sd

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  aclocal.m4  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  libtool  license.xml  project.xml
agent/: CMakeLists.txt
agent/src/: fty_mdns_sd.cc
builds/check_zproject/: ci_build.sh
doc/: .gitignore  Makefile  Makefile.am  Makefile.in  asciidoc.conf  fty-mdns-sd.adoc
include/: Makefile.am  fty_mdns_sd.h  fty_mdns_sd_library.h  fty_mdns_sd_manager.h  fty_mdns_sd_server.h
lib/: CMakeLists.txt
lib/include/: fty_mdns_sd_library.h  fty_mdns_sd_server.h
lib/src/: .gitignore  avahi_wrapper.cc  avahi_wrapper.h  fty_mdns_sd_classes.h  fty_mdns_sd_server.cc
lib/tests/: fty_mdns_sd_private_selftest.cc  main.cc
packaging/debian/: changelog  control  copyright  fty-mdns-sd.dsc.obs  fty-mdns-sd.install  fty-mdns-sd.manpages  libfty-mdns-sd-dev.install  libfty-mdns-sd0.install  rules
packaging/redhat/: fty-mdns-sd.spec
resources/: fty-mdns-sd.cfg.in  fty-mdns-sd.service.in
setup/: 10-avahi-lxc.sh  ipc-meta-setup-avahi.conf
src/: .gitignore  Makemodule.am  avahi_wrapper.cc  avahi_wrapper.h  fty-mdns-sd.cfg.in  fty-mdns-sd.service.in  fty_mdns_sd.cc  fty_mdns_sd_classes.h  fty_mdns_sd_manager.cc  fty_mdns_sd_mapping.cc  fty_mdns_sd_mapping.h  fty_mdns_sd_private_selftest.cc  fty_mdns_sd_selftest.cc  fty_mdns_sd_server.cc  libfty_mdns_sd.pc.in
zproject-hold/: fty-mdns-sd.install  install.xml  libfty-mdns-sd-dev.install
